# Chatara

./: .env.example  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  chatara.toml
backend/crates/charata/: Cargo.toml
backend/crates/charata/src/: config.rs  main.rs
backend/crates/charata/src/common/: catcher.rs  fairings.rs  mod.rs
backend/crates/charata/src/common/helpers/: character_profiles.rs  histories.rs  history_indexes.rs
backend/crates/charata/src/endpoints/: character.rs  history.rs  mod.rs  profile.rs  root.rs
backend/crates/charata/src/entity/: character_profiles.rs  history_indexes.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
backend/crates/chatara/: Cargo.toml
backend/crates/chatara-storage/: Cargo.toml
backend/crates/chatara-storage/src/: error.rs  lib.rs
backend/crates/chatara-tool/: Cargo.toml
backend/crates/chatara-tool/src/: asr.rs  chat.rs  common.rs  consts.rs  error.rs  exp.json  exp2.json  lib.rs  meta.rs  profile.rs  tts.rs
backend/crates/chatara/src/: config.rs  error.rs  main.rs
backend/crates/chatara/src/common/: catcher.rs  fairings.rs  jwt.rs  mod.rs  requests.rs  tools.rs
backend/crates/chatara/src/common/guards/: auth.rs
backend/crates/chatara/src/common/helpers/: character_profiles.rs  histories.rs  history_indexes.rs  mod.rs  user.rs
backend/crates/chatara/src/endpoints/: agent.rs  character.rs  history.rs  mod.rs  root.rs  tool.rs
backend/crates/chatara/src/entity/: attached_resources.rs  character_profiles.rs  histories.rs  history_indexes.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
backend/crates/chatara/src/jwt/: mod.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250924_163940_assign_unique_name_to_char_prof.rs  m20250924_174510_add_updated_at_to_history_indexes.rs  m20250926_173725_user_created_at.rs  m20250927_164107_create_attached_resources.rs  m20250927_165525_create_resource_type.rs  m20250928_103346_create_prompt_character.rs  m20250928_104301_create_character_description.rs  m20250928_115054_character_of_user.rs  m20250928_133321_avatar_of_character.rs
docs/: ARCH.md  AUTH.md  DATABASE.md  ENDPOINTS.md  FRONTEND.md  TOOL.md
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: main.tsx  providers.tsx  vite-env.d.ts
frontend/src/components/chat/: CharacterSidebar.tsx  ChatHeader.tsx  ChatInput.tsx  ChatWelcome.tsx  LeftPanel.tsx  MessageList.tsx  MobileSessionHistory.tsx  ResizablePanel.tsx  RightPanel.tsx  Sidebar.tsx
frontend/src/components/layout/: BottomNav.tsx  LeftTabs.tsx
frontend/src/components/ui/: ThemeSwitcher.tsx  UserPopover.tsx
frontend/src/hooks/: useWindowDimensions.ts
frontend/src/lib/: fetcher.ts
frontend/src/lib/api/: auth.ts  base.ts  characters.ts  histories.ts  tools.ts
frontend/src/lib/helper/: character-session-grouper.ts
frontend/src/mocks/: browser.ts  handlers.ts
frontend/src/routes/: __root.tsx  _chat.tsx  chat.tsx  discover.tsx  index.tsx  profile.tsx
frontend/src/routes/_chat/: chat.tsx  discover.tsx  profile.tsx
frontend/src/routes/_chat/chat/: $characterId.tsx  index.tsx
frontend/src/routes/_chat/chat/$characterId/: $sessionId.tsx  index.tsx
frontend/src/routes/auth/: login.tsx
frontend/src/routes/chat/: $characterId.tsx  index.tsx
frontend/src/routes/chat/$characterId/: $sessionId.tsx  index.tsx
frontend/src/store/: chatStore.ts  devtoolsStore.ts  sidebarStore.ts
frontend/src/styles/: hero.ts
