[workspace.package]
authors = ["Krysztal Huang <krysztal.huang@outlook.com>"]
edition = "2024"
license = "Apache-2.0"
version = "0.0.1"

[workspace]
members = ["./crates/charata/", "./crates/migration/"]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
educe = "0.6"
env_logger = "0.11"
jsonwebtoken = "9.3"
log = "0.4"
mimalloc = { version = "0.1", features = ["v3"] }
openai = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = "1"
uuid = { version = "1.18", features = ["v7"] }

migration = { path = "./crates/migration/" }

[workspace.dependencies.figment]
features = ["toml", "env", "json"]
version = "*"

[workspace.dependencies.sea-orm]
version = "1.1"
features = ["runtime-tokio", "sqlx-postgres"]

[workspace.dependencies.sea-orm-migration]
version = "1.1"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[workspace.dependencies.rocket]
version = "0.5"
features = ["json", "uuid"]
