[workspace.package]
authors = ["Krysztal Huang <krysztal.huang@outlook.com>"]
edition = "2024"
license = "Apache-2.0"
version = "0.0.1"

[workspace]
members = [
    "./crates/chatara-storage",
    "./crates/chatara-tool/",
    "./crates/chatara/",
    "./crates/migration/",
]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
educe = "0.6"
env_logger = "0.11"
im = "15"
jsonwebtoken = "9.3"
log = "0.4"
mimalloc = { version = "0.1", features = ["v3"] }
openai-api-rs = "6.0.11"
openidconnect = "4.0"
reqwest = "0.12"
rust-s3 = { version = "0.37" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqids = "0.4"
thiserror = "2.0"
tokio = "1"
url = { version = "*", features = ["serde"] }
uuid = { version = "1.18", features = ["v7"] }

chatara-storage = { path = "./crates/chatara-storage/" }
chatara-tool = { path = "./crates/chatara-tool/" }
migration = { path = "./crates/migration/" }

[workspace.dependencies.figment]
features = ["toml", "env"]
version = "*"

[workspace.dependencies.sea-orm]
version = "1.1"
features = ["runtime-tokio", "sqlx-postgres"]

[workspace.dependencies.sea-orm-migration]
version = "1.1"
features = ["runtime-tokio", "sqlx-postgres"]

[workspace.dependencies.rocket]
version = "0.5"
features = ["json", "uuid"]
