[package]
name = "charata"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
educe.workspace = true
mimalloc.workspace = true
rocket.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
