[package]
name = "chatara-storage"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
futures.workspace = true
log.workspace = true
reqwest.workspace = true
rust-s3.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
