[package]
name = "chatara-tool"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace=true
im.workspace = true
log.workspace = true
openai-api-rs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

chatara-storage.workspace = true
