[package]
name = "chatara"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
educe.workspace = true
env_logger.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
mimalloc.workspace = true
openai.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
rocket.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

migration.workspace = true
