[package]
name = "chatara"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
educe.workspace = true
env_logger.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
mimalloc.workspace = true
openai-api-rs.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
rocket.workspace = true
rust-s3.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
sqids.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

chatara-storage.workspace = true
chatara-tool.workspace = true
migration.workspace = true
